# annotated-maps-sp

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  render.yaml
.claude/commands/: docs-fact-check.md
.github/: pull_request_template.md
.github/scripts/: check_doc_facts.py  check_doc_links.py  check_external_urls.py  check_pr_body.py  check_workflow_triggers.py  docs_common.py  fact_demo_runs.py  test_docs_common.py  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  manage.py  predeploy.sh  pyproject.toml
backend/annotated_maps/: api.py  asgi.py  settings.py  telemetry.py  urls.py  wsgi.py
backend/core/: admin.py  api.py  audit.py  auth.py  auth_api.py  logging.py  middleware.py  models.py  views.py
backend/core/migrations/: 0001_enable_postgis.py  0002_base_models.py  0003_auditevent.py  0004_identity.py  0005_alter_group_options_alter_group_managers.py  0006_user_auth_fields_authsession.py
backend/core/tests/: test_audit.py  test_auth.py  test_auth_api.py  test_health.py  test_identity.py  test_managers.py  test_models.py  test_observability.py  test_postgis.py  test_security_headers.py  test_telemetry.py
backend/core/tests/visibility/: test_engine.py  test_properties.py  test_resolve.py  test_rules.py  test_viewer.py
backend/core/visibility/: __init__.py  engine.py  resolve.py  rules.py  viewer.py
backend/maps/: api.py  mod_api.py  models.py  sandbox.py  schemas.py  seed.py  seed_data.geojson  seed_schema.py  visibility.py
backend/maps/management/commands/: reap_ephemeral.py  seed_demo.py  seed_preview.py
backend/maps/migrations/: 0001_initial.py  0002_section_teaser_text.py  0003_note_parent.py  0004_note_sandbox_fields.py  0005_note_area_path.py  0006_note_anchor_constraint.py
backend/maps/tests/: conftest.py  test_authorization.py  test_discovery_api.py  test_identity.py  test_mod_api.py  test_models.py  test_notes_api.py  test_reaper.py  test_sandbox.py  test_seed.py  test_seed_preview.py  test_seed_schema.py  test_tour_contract.py  test_visibility.py
docs/: DEPLOY.md  aws-primer.md  for-reviewers.md  kubernetes-primer.md  lessons-learned.md  m3-demo-run.md  m4-pipeline.md  slos.md
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.alb.config.ts  playwright.config.ts  playwright.prod.config.ts  vite.config.ts
scripts/: README.md  count_lines.py  demo-app-deploy.sh  demo-cost.sh  demo-down.sh  demo-images.sh  demo-infra-up.sh  demo-up.sh  neon-branch.sh  smoke_test.py  synthetic_traffic.py  test_token_usage.py  token_usage.py
(+197 files in other folders)
