[project]
name = "backend"
version = "0.1.0"
description = "Annotated Maps API backend"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<5.2",
    "django-cors-headers>=4.4",
    "django-environ>=0.13.0",
    "django-ninja>=1.3",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.2",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
    "django-stubs-ext>=6.0.5",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
check_untyped_defs = true
[tool.django-stubs]
django_settings_module = "annotated_maps.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "annotated_maps.settings"
python_files = ["test_*.py"]
addopts = "-q"
